- added --dhcp-tag section for better DHCP customization (esp with multiple subnets)
- added Apache proxying around XMLRPC port for wider network access
- refactor XMLRPC API and establish a read-write API
- allow for configuring of read-write XMLRPC users in /etc/cobbler/auth.conf
- WebUI
- packaged /var/lib/cobbler/settings as a config file
- added BuildRequires to help build on other platforms
 
* Thu Aug 30 2007 - 0.6.1
- re enable --resolve in yumdownloader (cobbler repo mgmt feature)
- fix get_distros_for_koan API function in cobblerd (not used by koan)
- allow find API to search by arbitrary fields
- status and logging now shows system names
- upgraded init scripts
- zeroconf/avahi publishing for cobblerd service
- logRequests = 0 for XMLRPC.  Make it be quiet.
- ignore subdirectories of /var/lib/cobbler/snippets
- fixed bug in graph rendering that allowed for upward property propogation in some cases
- fixed bug that did not correctly evaluate repository settings of inherited sub-profiles/objects
- tweaked domU sample kickstart to include wget
- added some more unit tests
- fix typo down one error path in cobbler sync.
- fix reposync handling when using rsync protocol and directory paths do not contain arch
- allow basic usage of Cheetah variables in config files @@server@@, etc.
- fix auto-repo attachment for distros with split trees (i.e. RHEL5)

* Thu Aug 09 2007 - 0.6.0 
- bugfix in error path in "cobbler check"
- stable release for 0.5.x

* Thu Jul 26 2007 - 0.5.2 (RC)
- Have cobbler check ensure services are started
- Add cobbler validateks command to look for broken rendered kickstarts
- Added -v/--version
- Added SNIPPET::foo capability to pull /var/lib/cobbler/snippets/foo into templates (anywhere)
- Import can now take an --available-as=nfs://server:/mount/point to do cobbler import without mirroring
- Feature to enable "pxe_just_once" for boot loop prevention

* Fri Jul 20 2007 - 0.5.1
- Added logging for cobblerd -- /var/log/cobbler/cobblerd.log