@@ -33,8 +33,8 @@ VFN=valueForName
 currentTime=time.time
 __CHEETAH_version__ = '2.0rc8'
 __CHEETAH_versionTuple__ = (2, 0, 0, 'candidate', 8)
-__CHEETAH_genTime__ = 1190142943.107908
-__CHEETAH_genTimestamp__ = 'Tue Sep 18 15:15:43 2007'
+__CHEETAH_genTime__ = 1190239979.666712
+__CHEETAH_genTimestamp__ = 'Wed Sep 19 18:12:59 2007'
 __CHEETAH_src__ = 'webui_templates/master.tmpl'
 __CHEETAH_srcLastModified__ = 'Tue Sep 18 15:11:43 2007'
 __CHEETAH_docstring__ = 'Autogenerated by CHEETAH: The Python-Powered Template Engine'
